LeNet final version

--- a/notebooks/Lenet.ipynb
+++ b/notebooks/Lenet.ipynb
@@ -2,13 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting /tmp/dataset/train-images-idx3-ubyte.gz\n",
+      "Extracting /tmp/dataset/train-labels-idx1-ubyte.gz\n",
+      "Extracting /tmp/dataset/t10k-images-idx3-ubyte.gz\n",
+      "Extracting /tmp/dataset/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.examples.tutorials.mnist import input_data\n",
@@ -66,9 +77,9 @@
     "        writer.add_summary(s, iteration)\n",
     "        writer.flush()\n",
     "        \n",
-    "def run(scope, no, rate=1, conv=None):\n",
+    "def run(scope, rate=1, conv=None):\n",
     "    \n",
-    "    print(\"Running model: {} FM Rate: {}\".format(scope, rate))\n",
+    "    print(\"Running model: {}\".format(scope))\n",
     "    \n",
     "    x = tf.placeholder(tf.float32, [None, 784])\n",
     "    keep_prob = tf.placeholder(tf.float32)\n",
@@ -93,15 +104,13 @@
     "    \n",
     "\n",
     "    with tf.name_scope(scope):\n",
-    "        with tf.name_scope(str(rate)):\n",
-    "            with tf.name_scope(str(no)):\n",
-    "                with tf.name_scope(\"test\"):\n",
-    "                    test_summary = tf.summary.scalar('accuracy', scalar)\n",
+    "        with tf.name_scope(\"test\"):\n",
+    "            test_summary = tf.summary.scalar('accuracy', scalar)\n",
     "\n",
-    "                with tf.name_scope(\"train\"):\n",
-    "                    train1 = tf.summary.scalar('accuracy', accuracy)\n",
-    "                    train2 = tf.summary.scalar('loss', cross_entropy)\n",
-    "                    train_summary = tf.summary.merge([train1, train2])\n",
+    "        with tf.name_scope(\"train\"):\n",
+    "            train1 = tf.summary.scalar('accuracy', accuracy)\n",
+    "            train2 = tf.summary.scalar('loss', cross_entropy)\n",
+    "            train_summary = tf.summary.merge([train1, train2])\n",
     "\n",
     "    config = tf.ConfigProto()\n",
     "    config.gpu_options.allow_growth=True\n",
@@ -124,35 +133,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true,
     "scrolled": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running model: basic\n",
+      "step: 0 accuracy: 0.1048\n",
+      "step: 1000 accuracy: 0.9593\n",
+      "step: 2000 accuracy: 0.9718\n",
+      "step: 3000 accuracy: 0.9800\n",
+      "step: 4000 accuracy: 0.9819\n",
+      "Running model: bin_weights/vector/1\n",
+      "step: 0 accuracy: 0.1032\n",
+      "step: 1000 accuracy: 0.9510\n",
+      "step: 2000 accuracy: 0.9666\n",
+      "step: 3000 accuracy: 0.9742\n",
+      "step: 4000 accuracy: 0.9780\n",
+      "Running model: bin_weights/scalar/1\n",
+      "step: 0 accuracy: 0.0937\n",
+      "step: 1000 accuracy: 0.9457\n",
+      "step: 2000 accuracy: 0.9634\n",
+      "step: 3000 accuracy: 0.9721\n",
+      "step: 4000 accuracy: 0.9776\n"
+     ]
+    }
+   ],
+   "source": [
+    "rate = 1\n",
+    "run('basic')\n",
+    "run(\"bin_weights/vector/{}\".format(rate), rate, conv=c.conv_bin_weights_vector)\n",
+    "run(\"bin_weights/scalar/{}\".format(rate), rate, conv=c.conv_bin_weights_scalar)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
