--- a/docs/licencjat.tex
+++ b/docs/licencjat.tex
@@ -119,6 +119,10 @@ Currently deep neural networks get better results than state-of-the-art algorith
         
         \item Epoch - one pass over all training set.
         
+        \item Overfitting - effect which occurs when machine learning model fits to the noise of the training sample instead of the underlying trend behind the data. It has a negative effect on the neural network performance on the real data.
+        
+        \item Regularization - set of techniques which help to reduce overfitting.
+        
         \item Dropout layer - a layer which returns a modification of its input such that some of the values are randomly set to zero. Dropout layers are used as a regularization technique.   
     \end{itemize}
 
